# basis-project

./: .gitignore  README.md  pyproject.toml  setup.sh
src/: base_outputs.json  benchmark.ipynb  eval.ipynb  inference.ipynb  model.ipynb
src/final_robust_adapter/: adapter_config.json
src/results/: base_outputs.json  base_outputs_250.json  finetuned_outputs.json  finetuned_outputs_250.json  llama_suffixes.json  llama_suffixes_250.json  llama_suffixes_250_25_wide.json  llama_suffixes_new.json
