[build-system]
requires = ["setuptools>42", "wheel]
build_backend = "setuptools.build_meta"

[project]
name="basis-project"
version="0.1.0"
authors = [
    { name = "Cyan Ding", email="cyanding@berkeley.edu" }
    { name = "Brandon Qi", email="bqi@berkeley.edu"}
]
description = "Final project for Berkeley AI Safety Decal"
readme = "README.md"

requires-python=">=3.10"
dependencies = [
    
]


