[build-system]
requires = ["setuptools>42", "wheel"]
build_backend = "setuptools.build_meta"

[project]
name="basis-project"
version="0.1.0"
authors = [
    { name = "Cyan Ding", email="cyanding@berkeley.edu" },
    { name = "Brandon Qi", email="bqi@berkeley.edu"}
]
description = "Final project for Berkeley AI Safety Decal"
readme = "README.md"

requires-python=">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]


